<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ChooseYesNoTitle">Вірно - Не вірно</string>
    <string name="aboutTitle">Про програму</string>
    <string name="achievementsTitle">Досягнення</string>
    <string name="action_about">Опис</string>
    <string name="action_settings">Налаштування</string>
    <string name="action_sound">Звук увімк/вимк</string>
    <string name="all_alphabet_title">Весь алфавіт</string>
    <string name="alphabetMenuTitle">Виберіть урок</string>
    <string name="alphabetTitle">Введення</string>
    <string name="answers">Прав:</string>
    <string name="app_name">Мова жестів</string>
    <string name="chooseGestureTitle">Виберіть Жест</string>
    <string name="chooseLetterTitle">Виберіть Букву</string>
    <string name="choosePairTitle">Знайдіть Пару</string>
    <string name="clearStatisticsDialogNo">Ні</string>
    <string name="clearStatisticsDialogQuestion">Ви справді хочете очистити статистику?</string>
    <string name="clearStatisticsDialogTitle">Скидання статистики</string>
    <string name="clearStatisticsDialogYes">Так</string>
    <string name="close">Закрити</string>
    <string name="com.crashlytics.android.build_id">9f873d53-d68c-4333-b898-2432bbfbf089</string>
    <string name="effects">Ефекти</string>
    <string name="hello_world">Hello world!</string>
    <string name="longLetters">Д</string>
    <string name="mainMenuTitle">Виберіть Гру</string>
    <string name="my_achievements">Мої досягнення:</string>
    <string name="noText">НІ</string>
    <string name="off">Вимк</string>
    <string name="on">Увімк</string>
    <string name="play_again">Грати ще</string>
    <string name="score">Счет:</string>
    <string name="scoreTable">Рахунок: 1250</string>
    <string name="scoreText">Очки: %s</string>
    <string name="settigsTitle">Налаштування</string>
    <string name="sound">Звук</string>
    <string name="statisticsTitle">Статистика</string>
    <string name="time">Час:</string>
    <string name="timeTable">Час: 0:40</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="total">Всього:</string>
    <string name="training">Тренування</string>
    <string name="underconstraction">Розділ в розробці</string>
    <string name="vibration">Вібрація</string>
    <string name="voice">Голос</string>
    <string name="volume">Гучність</string>
    <string name="wordPlayerTitle">Слова</string>
    <string name="yesText">ТАК</string>
</resources>
