<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="#fffefefe" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent"
    <LinearLayout android:orientation="horizontal" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="UNKNOWN_DATA_0x7801" android:layout_height="wrap_content" android:text="@string/sound" />
        <Switch android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/switchSound" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:checked="true" android:textOn="@string/on" android:textOff="@string/off" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="UNKNOWN_DATA_0x7801" android:layout_height="wrap_content" android:text="@string/effects" />
        <Switch android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/switchEffects" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:checked="true" android:textOn="@string/on" android:textOff="@string/off" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="UNKNOWN_DATA_0x7801" android:layout_height="wrap_content" android:text="@string/vibration" />
        <Switch android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/switchVibration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:checked="true" android:textOn="@string/on" android:textOff="@string/off" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="UNKNOWN_DATA_0x7801" android:layout_height="wrap_content" android:text="@string/voice" />
        <ru.avroraventures.russiansinglanguage.tools.VoiceSpinner android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/spinnerVoices_menu_items" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x2801" android:layout_margin="5dp" android:layout_weight="1.0" android:spinnerMode="dropdown" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="UNKNOWN_DATA_0x7801" android:layout_height="wrap_content" android:text="@string/volume" />
        <SeekBar android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/volumeSeekBar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:layout_weight="1.0" />
    </LinearLayout>
    <View android:background="#ff777777" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
        <Spinner android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:entries="@array/statisticsSpinnerEntries" android:id="@+id/statisticsSpinner" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:layout_weight="1.0" />
        <TextView android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/noDataTextView" android:visibility="gone" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:text="[нет статистических данных]" android:layout_weight="1.0" />
        <ImageView android:id="@+id/clearStatisticsButton" android:padding="5dp" android:layout_width="UNKNOWN_DATA_0x2801" android:layout_height="UNKNOWN_DATA_0x2801" android:src="@drawable/ic_action_remove" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/statisticsTableLinearLayout" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TableLayout android:background="0x106000f" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
            <TableRow android:paddingTop="1dp" android:paddingBottom="1dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <ru.avroraventures.russiansinglanguage.tools.AutoResizeTextView android:textColor="0x106000c" android:id="@+id/statisticsColumnTitle" android:background="@color/background_color" android:padding="5dp" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:text="Группа" android:lines="1" android:layout_weight="4.0" />
                <ru.avroraventures.russiansinglanguage.tools.AutoResizeTextView android:textColor="0x106000c" android:id="@+id/statisticsColumnTitle1" android:background="@color/background_color" android:padding="5dp" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:layout_marginLeft="1dp" android:text="Ответов, прав/всего" android:lines="2" android:layout_weight="4.0" />
                <ru.avroraventures.russiansinglanguage.tools.AutoResizeTextView android:textColor="0x106000c" android:id="@+id/statisticsColumnTitle2" android:background="@color/background_color" android:padding="5dp" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:layout_marginLeft="1dp" android:text="Среднее время ответа, cек" android:lines="3" android:layout_weight="4.0" />
                <ru.avroraventures.russiansinglanguage.tools.AutoResizeTextView android:textColor="0x106000c" android:id="@+id/statisticsColumnTitle3" android:background="@color/background_color" android:padding="5dp" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:layout_marginLeft="1dp" android:text="Процент усвоения" android:lines="2" android:layout_weight="4.0" />
            </TableRow>
        </TableLayout>
        <ListView android:id="@+id/listView" android:background="@drawable/border_ui" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
